# PlayBar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  messages.pot  messages.sh  metadata.desktop  rc.js
KCM_PlayBarShortcuts/: .~CMakeLists.txt  CMakeLists.txt  KCM_PlayBarShortcuts.kdev4
KCM_PlayBarShortcuts/.kdev4/: KCM_PlayBarShortcuts.kdev4
KCM_PlayBarShortcuts/src/: .~CMakeLists.txt  .~kcm_playbarshortcuts.cpp  .~kcm_playbarshortcuts.h  .~kcm_playbarshortcuts.ui  .~main.cpp  .~mprisservice.cpp  .~mprisservice.h  CMakeLists.txt  mprisservice.cpp  (+4 more)
PlayBarEngine/: CMakeLists.txt  playbarengine.cpp  playbarengine.h
addons/: CMakeLists.txt  metadata.desktop
addons/contents/code/: main.js
contents/: CMakeLists.txt
contents/code/: control.js
contents/config/: main.xml
contents/data/: .CHANGELOG~  CHANGELOG
contents/locale/es/LC_MESSAGES/: .directory  es.mo  es.po
contents/theme/: .slider.svgz.kate-swp
contents/theme/playbar/: arrows-opaque.svgz  audio-opaque.svgz  media-opaque-bar.svgz  media-opaque.svgz  media.svgz  nocover.svgz  rating-opaque.svgz
contents/ui/: .directory  CoverArt.qml  Dialog.qml  Frame.qml  IconWidget.qml  InlineDialog.qml  Layout.qml  LayoutsResources.qml  Mpris2.qml  Notification.qml  PlaybackBar.qml  PlaybackItem.qml  PlaybackWidget.qml  PopupButton.qml  RatingItem.qml  Slider.qml  SliderSeek.qml  TimeLabel.qml  TitlePopup.qml  TrackInfo.qml  Volume.qml  config.ui  main.qml
contents/ui/private/: .directory
engine/: CMakeLists.txt  filetype.cpp  plasma-engine-playbar.desktop  playbarengine.cpp  playbarengine.h  playbarkeys.operations  service.cpp  service.h  shortcuts.cpp  shortcuts.h
plasmoid/: CMakeLists.txt  metadata.desktop
(+21 files in other folders)
